--- a/WebBTL/WebBTL.csproj
+++ b/WebBTL/WebBTL.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\AspNetCoreHero.ToastNotification.1.1.0\build\AspNetCoreHero.ToastNotification.props" Condition="Exists('..\packages\AspNetCoreHero.ToastNotification.1.1.0\build\AspNetCoreHero.ToastNotification.props')" />
   <Import Project="..\packages\Microsoft.AspNetCore.Razor.Design.2.2.0\build\netstandard2.0\Microsoft.AspNetCore.Razor.Design.props" Condition="Exists('..\packages\Microsoft.AspNetCore.Razor.Design.2.2.0\build\netstandard2.0\Microsoft.AspNetCore.Razor.Design.props')" />
   <Import Project="..\packages\Microsoft.AspNetCore.Mvc.Razor.Extensions.2.2.0\build\netstandard2.0\Microsoft.AspNetCore.Mvc.Razor.Extensions.props" Condition="Exists('..\packages\Microsoft.AspNetCore.Mvc.Razor.Extensions.2.2.0\build\netstandard2.0\Microsoft.AspNetCore.Mvc.Razor.Extensions.props')" />
   <Import Project="..\packages\Microsoft.DiaSymReader.Native.1.7.0\build\Microsoft.DiaSymReader.Native.props" Condition="Exists('..\packages\Microsoft.DiaSymReader.Native.1.7.0\build\Microsoft.DiaSymReader.Native.props')" />
@@ -570,9 +571,9 @@
     <Compile Include="Areas\Admin\Controllers\AdminCustomersController.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminPagesController.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminProductsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AdminRolesController.cs" />
     <Compile Include="Areas\Admin\Controllers\AdmintblTinTucsController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
-    <Compile Include="Areas\Admin\Controllers\RolesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Enums\CacheKey.cs" />
@@ -2753,36 +2754,31 @@
     <Content Include="Models\EononPro.edmx.diagram">
       <DependentUpon>EononPro.edmx</DependentUpon>
     </Content>
-    <Content Include="Areas\Admin\Views\Roles\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\Roles\Delete.cshtml" />
-    <Content Include="Areas\Admin\Views\Roles\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\Roles\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\Roles\Index.cshtml" />
     <Content Include="Areas\Admin\Views\AdminAccounts\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\AdminAccounts\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\AdminAccounts\Details.cshtml" />
     <Content Include="Areas\Admin\Views\AdminAccounts\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\AdminAccounts\Index.cshtml" />
     <Content Include="Areas\Admin\Views\AdminCustomers\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\AdminCustomers\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\AdminCustomers\Details.cshtml" />
     <Content Include="Areas\Admin\Views\AdminCustomers\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\AdminCustomers\Index.cshtml" />
     <Content Include="Areas\Admin\Views\AdminProducts\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\AdminProducts\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\AdminProducts\Details.cshtml" />
     <Content Include="Areas\Admin\Views\AdminProducts\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\AdminProducts\Index.cshtml" />
     <Content Include="Areas\Admin\Views\AdminPages\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\AdminPages\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\AdminPages\Details.cshtml" />
     <Content Include="Areas\Admin\Views\AdminPages\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\AdminPages\Index.cshtml" />
     <Content Include="Areas\Admin\Views\AdmintblTinTucs\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\AdmintblTinTucs\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\AdmintblTinTucs\Details.cshtml" />
     <Content Include="Areas\Admin\Views\AdmintblTinTucs\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\AdmintblTinTucs\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminRoles\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminRoles\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminRoles\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminRoles\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminRoles\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -2817,6 +2813,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Content\images\products\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
@@ -2892,6 +2889,7 @@
     <Error Condition="!Exists('..\packages\Microsoft.AspNetCore.Mvc.Razor.Extensions.2.2.0\build\netstandard2.0\Microsoft.AspNetCore.Mvc.Razor.Extensions.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.AspNetCore.Mvc.Razor.Extensions.2.2.0\build\netstandard2.0\Microsoft.AspNetCore.Mvc.Razor.Extensions.targets'))" />
     <Error Condition="!Exists('..\packages\Microsoft.AspNetCore.Mvc.Razor.ViewCompilation.2.2.0\build\netstandard2.0\Microsoft.AspNetCore.Mvc.Razor.ViewCompilation.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.AspNetCore.Mvc.Razor.ViewCompilation.2.2.0\build\netstandard2.0\Microsoft.AspNetCore.Mvc.Razor.ViewCompilation.targets'))" />
     <Error Condition="!Exists('..\packages\Microsoft.AspNetCore.Razor.Design.2.2.0\build\netstandard2.0\Microsoft.AspNetCore.Razor.Design.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.AspNetCore.Razor.Design.2.2.0\build\netstandard2.0\Microsoft.AspNetCore.Razor.Design.props'))" />
+    <Error Condition="!Exists('..\packages\AspNetCoreHero.ToastNotification.1.1.0\build\AspNetCoreHero.ToastNotification.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\AspNetCoreHero.ToastNotification.1.1.0\build\AspNetCoreHero.ToastNotification.props'))" />
   </Target>
   <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
   <Import Project="..\packages\Microsoft.AspNetCore.Mvc.Razor.Extensions.2.2.0\build\netstandard2.0\Microsoft.AspNetCore.Mvc.Razor.Extensions.targets" Condition="Exists('..\packages\Microsoft.AspNetCore.Mvc.Razor.Extensions.2.2.0\build\netstandard2.0\Microsoft.AspNetCore.Mvc.Razor.Extensions.targets')" />
