--- a/WebBTL/WebBTL.csproj
+++ b/WebBTL/WebBTL.csproj
@@ -2585,6 +2585,7 @@
     <Content Include="Content\clients\plugins\uplot\uPlot.min.css" />
     <Content Include="Content\images\banner.png" />
     <Content Include="Content\images\logoFooter.png" />
+    <Content Include="Content\images\products\goku-black-super-3840x2160-13399.jpg" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -2813,7 +2814,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Content\images\products\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
