--- a/WebBTL/WebBTL.csproj
+++ b/WebBTL/WebBTL.csproj
@@ -2591,6 +2591,20 @@
     <Content Include="Content\clients\plugins\uplot\uPlot.min.css" />
     <Content Include="Content\images\banner.png" />
     <Content Include="Content\images\bannerLienHe.png" />
+    <Content Include="Content\images\Categories\Audi.png" />
+    <Content Include="Content\images\Categories\bmw.png" />
+    <Content Include="Content\images\Categories\chevrolet.gif" />
+    <Content Include="Content\images\Categories\ford.png" />
+    <Content Include="Content\images\Categories\honda.png" />
+    <Content Include="Content\images\Categories\hyundai.png" />
+    <Content Include="Content\images\Categories\isuzuDmax.png" />
+    <Content Include="Content\images\Categories\kia.png" />
+    <Content Include="Content\images\Categories\mazda.png" />
+    <Content Include="Content\images\Categories\mitsubishi.png" />
+    <Content Include="Content\images\Categories\nissan.png" />
+    <Content Include="Content\images\Categories\suzuki.png" />
+    <Content Include="Content\images\Categories\toyota.png" />
+    <Content Include="Content\images\Categories\vinfast.png" />
     <Content Include="Content\images\logoFooter.png" />
     <Content Include="Content\images\products\goku-black-super-3840x2160-13399.jpg" />
     <Content Include="Content\images\tintucs\0612aaca01ac0b9fc0f6ab12e27287a5.png" />
