--- a/WebBTL/WebBTL.csproj
+++ b/WebBTL/WebBTL.csproj
@@ -2925,6 +2925,7 @@
     <Content Include="Views\tblTinTuc\Index.cshtml" />
     <Content Include="Views\tblTinTuc\Details.cshtml" />
     <Content Include="Views\Pages\About.cshtml" />
+    <Content Include="Views\Home\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
