--- a/WebBTL/Web.config
+++ b/WebBTL/Web.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebBTL-20241003101428.mdf;Initial Catalog=aspnet-WebBTL-20241003101428;Integrated Security=True" providerName="System.Data.SqlClient" /><add name="Eonon_ProEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HOANG;initial catalog=Eonon_Pro;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="Eonon_ProEntities1" connectionString="metadata=res://*/Models.EononPro.csdl|res://*/Models.EononPro.ssdl|res://*/Models.EononPro.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HOANG;initial catalog=Eonon_Pro;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebBTL-20241003101428.mdf;Initial Catalog=aspnet-WebBTL-20241003101428;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="Eonon_ProEntities" connectionString="metadata=res://*/Models.Eonon_ProEntities.csdl|res://*/Models.Eonon_ProEntities.ssdl|res://*/Models.Eonon_ProEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KIEN;initial catalog=Eonon_Pro;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
